#将该子项目下包含的内容反馈到主项目中
include_directories(.)

#c++_start
add_executable(c__repo-demo1.cpp demo01.cpp)
add_executable(c__repo-demo2.cpp demo02.cpp)
add_executable(c__repo-demo3.cpp demo03.cpp)
add_executable(c__repo-demo4.cpp demo04.cpp)
add_executable(c__repo-demo5.cpp demo05.cpp)
add_executable(c__repo-demo6.cpp demo06.cpp)
add_executable(c__repo-demo7.cpp demo07.cpp)
add_executable(c__repo-demo8.cpp demo08.cpp)
add_executable(c__repo-demo9.cpp demo09.cpp)
add_executable(c__repo-demo10.cpp demo10.cpp)
add_executable(c__repo-demo11.cpp demo11.cpp)
add_executable(c__repo-demo12.cpp demo12.cpp)
add_executable(c__repo-demo13.cpp demo13.cpp)
add_executable(c__repo-demo14.cpp demo14.cpp)
add_executable(c__repo-demo15.cpp demo15.cpp)
add_executable(c__repo-demo16.cpp demo16.cpp)
add_executable(c__repo-demo17.cpp demo17.cpp)
add_executable(c__repo-demo18.cpp demo18.cpp)
add_executable(c__repo-demo19.cpp demo19.cpp)
add_executable(c__repo-demo20.cpp demo20.cpp)
add_executable(c__repo-demo21.cpp demo21.cpp)
add_executable(c__repo-demo22.cpp demo22.cpp)
add_executable(c__repo-demo23.cpp demo23.cpp)
add_executable(c__repo-demo24.cpp demo24.cpp)
add_executable(c__repo-demo25.cpp demo25.cpp)
add_executable(c__repo-demo26.cpp demo26.cpp)
add_executable(c__repo-demo27.cpp demo27.cpp)
add_executable(c__repo-demo28.cpp demo28.cpp)
add_executable(c__repo-demo29.cpp demo29.cpp)
add_executable(c__repo-demo30.cpp demo30.cpp)
add_executable(c__repo-demo31.cpp demo31.cpp)
add_executable(c__repo-demo32.cpp demo32.cpp)
add_executable(c__repo-demo33.cpp demo33.cpp)
add_executable(c__repo-demo34.cpp demo34.cpp)
add_executable(c__repo-demo35.cpp demo35.cpp)
add_executable(c__repo-demo36.cpp demo36.cpp)
add_executable(c__repo-demo37.cpp demo37.cpp)
add_executable(c__repo-demo38.cpp demo38.cpp)
add_executable(c__repo-demo39.cpp demo39.cpp)
add_executable(c__repo-demo40.cpp demo40.cpp)
add_executable(c__repo-demo41.cpp demo41.cpp)
add_executable(c__repo-demo42.cpp demo42.cpp)
add_executable(c__repo-demo43.cpp demo43.cpp)
add_executable(c__repo-demo44.cpp demo44.cpp)
add_executable(c__repo-demo45.cpp demo45.cpp)
add_executable(c__repo-demo46.cpp demo46.cpp)
add_executable(c__repo-demo47.cpp demo47.cpp demo47.cpp)
#add_executable(c__repo-demo48.cpp demo48.cpp)