include_directories(.)

add_executable(start_chapters-demo01 demo01.cpp)
add_executable(start_chapters-demo02 demo02.cpp)
add_executable(start_chapters-demo03 demo03.cpp)
add_executable(start_chapters-demo04 demo04.cpp)
add_executable(start_chapters-demo05 demo05.cpp)
add_executable(start_chapters-demo06 demo06.cpp)
add_executable(start_chapters-demo07 demo07.cpp)
add_executable(start_chapters-demo08 demo08.cpp)
add_executable(start_chapters-demo09 demo09.cpp)
add_executable(start_chapters-demo10 demo10.cpp)
add_executable(start_chapters-demo11 demo11.cpp)
add_executable(start_chapters-demo12 demo12.cpp)
add_executable(start_chapters-demo13 demo13.cpp)
add_executable(start_chapters-demo14 demo14.cpp)
#add_executable(start_chapters-demo15)
#add_executable(start_chapters-demo16)