include_directories(.)

add_executable(start_chapters-demo01 demo01.cpp)
add_executable(start_chapters-demo02 demo02.cpp)
add_executable(start_chapters-demo03 demo03.cpp)
add_executable(start_chapters-demo04 demo04.cpp)
add_executable(start_chapters-demo05 demo05.cpp)
add_executable(start_chapters-demo06 demo06.cpp)
add_executable(start_chapters-demo07 demo07.cpp)
add_executable(start_chapters-demo08 demo08.cpp)
add_executable(start_chapters-demo09 demo09.cpp)
add_executable(start_chapters-demo10 demo10.cpp)
add_executable(start_chapters-demo11 demo11.cpp)
add_executable(start_chapters-demo12 demo12.cpp)
add_executable(start_chapters-demo13 demo13.cpp)
add_executable(start_chapters-demo14 demo14.cpp)
add_executable(start_chapters-demo15 demo15.cpp)
add_executable(start_chapters-demo16 demo16.cpp)
add_executable(start_chapters-demo17 demo17.cpp)
add_executable(start_chapters-demo18 demo18.cpp)
add_executable(start_chapters-demo19 demo19.cpp)
add_executable(start_chapters-demo20 demo20.cpp)
add_executable(start_chapters-demo21 demo21.cpp)
add_executable(start_chapters-demo22 demo22.cpp)
add_executable(start_chapters-demo23 demo23.cpp)
add_executable(start_chapters-demo24 demo24.cpp)
add_executable(start_chapters-demo25 demo25.cpp)
add_executable(start_chapters-demo26 demo26.cpp)
add_executable(start_chapters-demo27 demo27.cpp)
add_executable(start_chapters-demo28 demo28.cpp)
add_executable(start_chapters-demo29 demo29.cpp)
add_executable(start_chapters-demo30 demo30.cpp)
add_executable(start_chapters-demo31 demo31.cpp)
add_executable(start_chapters-demo32 demo32.cpp)
add_executable(start_chapters-demo33 demo33.cpp)
add_executable(start_chapters-demo34 demo34.cpp)
add_executable(start_chapters-demo35 demo35.cpp)
add_executable(start_chapters-demo36 demo36.cpp)
add_executable(start_chapters-demo37 demo37.cpp)
#add_executable(start_chapters-demo38)